footer in html Dateien ausgeschrieben

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -59,11 +59,11 @@
 <hr/>
 
 <div class="footer">
-  <a href="/">Impressum</a>
-  <a href="/">About</a>
-  <a href="/">Versandinfo</a>
-  <a href="/">FAQ</a>
-  <a href="/">Hilfe</a>
+  <a href="impressum.html">Impressum</a>
+  <a href="about.html">About</a>
+  <a href="versandinfo.html">Versandinfo</a>
+  <a href="faq.html">FAQ</a>
+  <a href="help.html">Hilfe</a>
 </div>
 </body>
 </html>
