--- a/views/help.html
+++ b/views/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="../css/impressumStyles.css">
+    <link rel ="stylesheet" href="./css/help.css">
     <title>Impressum</title>
 </head>
 <body>
@@ -13,26 +13,16 @@
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
     <hr/>
-
     
-    <h1>IMPRESSUM</h1>
-    <h2>Batteribrueder GmbH & Co KG</h2>
-    <p> Eine Straße 1 <br>
-        12345 Stadt <br>    
-        Land</p>
+    <h1>Wir sind für Sie da</h1>
+    <p>Sie erreicheen uns unter folgenden Kontaktdaten.</p>
 
     <h2>Kontaktdaten</h2>    
     <p> <b>T:</b>+00 0000 00000 <br>   
-        <b>E:</b>brueder@mail.com </p>    
+        <b>E:</b>brueder@mail.com </p>  
 
-    <h2>Rechtliche Hinweise</h2>
-    <h3>Haftung</h3>
-    <p> Alles ist in einem studentischen Rahmen benutzt worden und keine Tiere sind zu Schaden gekommen.</p>
-
-    <h2>Inhaltverantwortliche</h2>
-    <li>Florian "Batterie" Regnery</li>
-    <li>Marko "Brothers" Kalaburda</li>
-        
+    <p>Dringende Nachrichten bitte hier eingeben: </p>
+    <textarea name="message" placeholder="Text hier eingeben"cols="30" rows="10"></textarea>
 
     
 </body>
