--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Batterie Brüder</title>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <img src="../../images/Batteribrueder.svg" alt="bb-logo" class="bb-logo">
