--- a/views/help.html
+++ b/views/help.html
@@ -8,7 +8,7 @@
     <title>Impressum</title>
 </head>
 <body>
-    <img src="../../images/Batteribrueder.svg" alt="bb-logo" class="bbl">
+    <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
     <h1>Battery Brothers</h1>
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
