--- a/views/index.html
+++ b/views/index.html
@@ -59,11 +59,11 @@
 <hr/>
 
 <div class="footer">
-  <a href="impressum.html">Impressum</a>
-  <a href="about.html">About</a>
-  <a href="versandinfo.html">Versandinfo</a>
-  <a href="faq.html">FAQ</a>
-  <a href="help.html">Hilfe</a>
+  <a href="./impressum">Impressum</a>
+  <a href="./about">About</a>
+  <a href="./versandinfo">Versandinfo</a>
+  <a href="./faq">FAQ</a>
+  <a href="./help">Hilfe</a>
 </div>
 </body>
 </html>
