--- a/views/impressum.html
+++ b/views/impressum.html
@@ -12,6 +12,9 @@
     <h1>Battery Brothers</h1>
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+    <a href="index.html">
+        <button>Zurück zur Startseite</button>
+    </a>
     <hr/>
 
     
