--- a/views/help.html
+++ b/views/help.html
@@ -12,6 +12,9 @@
     <h1>Battery Brothers</h1>
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+    <a href="index.html">
+        <button>Zurück zur Startseite</button>
+    </a>
     <hr/>
     
     <h1>Wir sind für Sie da</h1>
@@ -22,7 +25,8 @@
         <b>E:</b>brueder@mail.com </p>  
 
     <p>Dringende Nachrichten bitte hier eingeben: </p>
-    <textarea name="message" placeholder="Text hier eingeben"cols="30" rows="10"></textarea>
+    <textarea name="message" placeholder="Text hier eingeben"cols="30" rows="10"></textarea><br>
+    <button name="submit">Submit</button>
 
     
 </body>
