--- a/views/versandinfo.html
+++ b/views/versandinfo.html
@@ -12,6 +12,9 @@
     <h1>Battery Brothers</h1>
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+    <a href="index.html">
+        <button>Zurück zur Startseite</button>
+    </a>
     <hr/>
 
     <h1>Versandarten</h1>
@@ -22,9 +25,6 @@
     <p>Nach Fertigstellung durch unsere Produktion erfolgt die Zustellung garantiert am folgenden Arbeitstag. Dies gilt nur inerhalb Deutschland<br><b>Versandlaufzeit</b>: ein Arbeitstag</p>
     <br>
     <h3>Versand ausserhalb Deutschlands noch nicht gewährleistet</h3>
-
-
-    
 
 </body>
 </html>
