new font-family in header

--- a/views/help.html
+++ b/views/help.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-    <h1>Battery Brothers</h1>
-    <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
-    <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
-    <a href="/">
-        <button>Zurück zur Startseite</button>
-    </a>
+    <div class="header"><h1>Battery Brothers</h1>
+        <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+        <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+        <a href="/">
+            <button>Zurück zur Startseite</button>
+        </a>
+        </div>
     <hr/>
     
     <h1>Wir sind für Sie da</h1>
@@ -26,7 +27,9 @@
 
     <p>Dringende Nachrichten bitte hier eingeben: </p>
     <textarea name="message" placeholder="Text hier eingeben"cols="30" rows="10"></textarea><br>
-    <button name="submit">Submit</button>
+    <a href="/help">
+        <button name="submit">Submit</button>
+    </a>
 
     
 </body>
