--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -1,3 +1,7 @@
+.header{
+  font-family: 'Quicksand', sans-serif;
+}
+
 details{
     margin-top: 20px;
 }
@@ -14,6 +18,6 @@ h3{
     margin-bottom: 40px;
   }
 
-p{
+.q1,.q2,.q3,.q4{
     font-size:small;
 }
