--- a/views/about.html
+++ b/views/about.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-    <h1>Battery Brothers</h1>
-    <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
-    <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
-    <a href="/">
-        <button>Zurück zur Startseite</button>
-    </a>
+    <div class="header"><h1>Battery Brothers</h1>
+        <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+        <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+        <a href="/">
+            <button>Zurück zur Startseite</button>
+        </a>
+        </div>
     <hr/>
 
     <h1>Florian "Batterie" Regnery</h1>
