--- a/views/faq.html
+++ b/views/faq.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-    <h1>Battery Brothers</h1>
+    <div class="header"><h1>Battery Brothers</h1>
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
     <a href="/">
         <button>Zurück zur Startseite</button>
     </a>
+    </div>
     <hr/>
     <div>
         <h1>FAQ</h1>
@@ -22,21 +23,21 @@
         <div >
             <details>
                 <summary><em>Wann habt ihr euch entschieden Batterien zu verkaufen?</em> </summary>
-                <p>Als wir gesehen haben, dass man mit einem Geschichtsstudium nichts verdient.</p>
+                <p class="q1">Als wir gesehen haben, dass man mit einem Geschichtsstudium nichts verdient.</p>
             </details>
 
             <details>
                 <summary><em> seid ihr besser als die anderen?</em> </summary>
-                <p>Weil wir besser als die anderen sind.</p>
+                <p class="q2">Weil wir besser als die anderen sind.</p>
             </details>
 
             <details>
                 <summary><em>Wie viele Batterien gibt es auf der Welt? </em></summary>
-                <p>65.368 t Batterien wurden im Jahr 2020 in Deutschland produziert. Das ist viel.</p>
+                <p class="q3">65.368 t Batterien wurden im Jahr 2020 in Deutschland produziert. Das ist viel.</p>
             </details>
             <details>
                 <summary><em>Hat man noch Zeit für die technische Hochschule, obwohl man Unternehmer ist? </em></summary>
-                <p>Diese Frage ist sehr persönlich, dahör möchte ich mich meinem Vorredner anschliessen und vielleicht sagen.</p>
+                <p class="q4">Diese Frage ist sehr persönlich, dahör möchte ich mich meinem Vorredner anschliessen und vielleicht sagen.</p>
             </details>
         </div>
     </div>
