--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bb-logo">
-  <h1>Battery Brothers</h1>
-  <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
-  <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+  <div class="header"><h1>Battery Brothers</h1>
+    <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+    <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
+    </div>
 
 <hr/>
 
