--- a/views/about.html
+++ b/views/about.html
@@ -19,11 +19,11 @@
     <hr/>
 
     <h1>Florian "Batterie" Regnery</h1>
-    <p>Co-Funder alelr Batterien weltweit.</p>
+    <p>Co-Funder aller Batterien weltweit.</p>
     <img src="/img/BB1.JPG" alt="batterie nummer 1" class="flo">
 
     <h1>Marko "Brothers" Kalaburda</h1>
-    <p>Der Anfangsbuchstabe steht für maximales Kauderwelsch.</p>
+    <p>Die Initialien stehen für maximales Kauderwelsch.</p>
     <img src="/img/BB2.JPG" alt="batterie nummer 2" class="mtok">
 
 
