--- a/views/impressum.html
+++ b/views/impressum.html
@@ -19,7 +19,7 @@
     <hr/>
 
     
-    <h1>IMPRESSUM</h1>
+    <h1>Impressum</h1>
     <h2>Batteribrueder GmbH & Co KG</h2>
     <p> Eine Straße 1 <br>
         12345 Stadt <br>    
