--- a/views/versandinfo.html
+++ b/views/versandinfo.html
@@ -20,10 +20,10 @@
 
     <h1>Versandarten</h1>
     <h3>Kostenloser Versand</h3>
-    <p>Der Standardversand an eine Lieferadresse innerhalb Deutschlands erfolgt <br><b>Versandlaufzeit</b>: vier Arbeitstag </p>
+    <p>Der Standardversand an eine Lieferadresse innerhalb Deutschlands erfolgt.<br><b>Versandlaufzeit</b>: vier Arbeitstag </p>
     <br>
     <h3>Expressversand</h3>
-    <p>Nach Fertigstellung durch unsere Produktion erfolgt die Zustellung garantiert am folgenden Arbeitstag. Dies gilt nur inerhalb Deutschland<br><b>Versandlaufzeit</b>: ein Arbeitstag</p>
+    <p>Nach Fertigstellung durch unsere Produktion erfolgt die Zustellung garantiert am folgenden Arbeitstag. Dies gilt nur inerhalb Deutschland.<br><b>Versandlaufzeit</b>: ein Arbeitstag</p>
     <br>
     <h3>Versand ausserhalb Deutschlands noch nicht gewährleistet</h3>
 
