--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
   <div class="oder">oder</div>
 
   <div class="register-link">
-    <a href="/">Registrieren</a>
+    <a href="/register">Registrieren</a>
   </div>
 </div>
 
