--- a/views/about.html
+++ b/views/about.html
@@ -18,14 +18,20 @@
         </div>
     <hr/>
 
-    <h1>Florian "Batterie" Regnery</h1>
-    <p>Co-Funder aller Batterien weltweit.</p>
-    <img src="/img/BB1.JPG" alt="batterie nummer 1" class="flo">
+    <div class="container">
+    <div class="flo-box">
+        <h2>Florian "Batterie" Regnery</h2>
+        <p>Co-Funder aller Batterien weltweit.</p>
+        <img src="/img/BB1.JPG" alt="batterie nummer 1" class="flo">
+    </div>
 
-    <h1>Marko "Brothers" Kalaburda</h1>
-    <p>Die Initialien stehen für maximales Kauderwelsch.</p>
-    <img src="/img/BB2.JPG" alt="batterie nummer 2" class="mtok">
+    <div>
+        <h2>Marko "Brothers" Kalaburda</h2>
+        <p>Die Initialien stehen für maximales Kauderwelsch.</p>
+        <img src="/img/BB2.JPG" alt="batterie nummer 2" class="mtok">
+    </div>
 
+    </div>
 
 
 
