--- a/views/index.html
+++ b/views/index.html
@@ -8,31 +8,43 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+
+  <a id="honeypot" href="/superAwesomeSubpage" style="
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;"></a>
+
+
   <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bb-logo">
   <div class="header"><h1>Battery Brothers</h1>
     <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
     </div>
 
-<hr/>
+  <hr/>
 
-<div class="bilder">
-  <div class="artikel">
-    <p>Batterie #1</p>
-    <img src="/img/Batterie1.svg" alt="batterie nummer 1">
-    <a href="/" class="cta">In den Warenkorb</a>
+  <div class="bilder">
+    <div class="artikel">
+      <p>Batterie #1</p>
+      <img src="/img/Batterie1.svg" alt="batterie nummer 1">
+      <a href="/" class="cta">In den Warenkorb</a>
+    </div>
+    <div class="artikel">
+      <p>Batterie #2</p>
+      <img src="/img/Batterie2.svg" alt="batterie nummer 2">
+      <a href="/">In den Warenkorb</a>
+    </div>
+    <div class="artikel">
+      <p>Batterie #3</p>
+      <img src="/img/Batterie3.svg" alt="batterie nummer 3">
+      <a href="/">In den Warenkorb</a>
+    </div>
   </div>
-  <div class="artikel">
-    <p>Batterie #2</p>
-    <img src="/img/Batterie2.svg" alt="batterie nummer 2">
-    <a href="/">In den Warenkorb</a>
-  </div>
-  <div class="artikel">
-    <p>Batterie #3</p>
-    <img src="/img/Batterie3.svg" alt="batterie nummer 3">
-    <a href="/">In den Warenkorb</a>
-  </div>
-</div>
 
 <hr/>
 
