--- a/views/about.html
+++ b/views/about.html
@@ -22,13 +22,17 @@
     <div class="flo-box">
         <h2>Florian "Batterie" Regnery</h2>
         <p>Co-Funder aller Batterien weltweit.</p>
+        <p><a href="mailto:batteriebruderflo@mail.de">batteriebruderflo@mail.de</a></p>
         <img src="/img/BB1.JPG" alt="batterie nummer 1" class="flo">
+        
     </div>
 
     <div>
         <h2>Marko "Brothers" Kalaburda</h2>
         <p>Die Initialien stehen für maximales Kauderwelsch.</p>
+        <p><a href="mailto:batteriebrudermarko@mail.de">batteriebrudermarko@mail.de</a></p>
         <img src="/img/BB2.JPG" alt="batterie nummer 2" class="mtok">
+        
     </div>
 
     </div>
