--- a/views/help.html
+++ b/views/help.html
@@ -22,8 +22,9 @@
     <p>Sie erreicheen uns unter folgenden Kontaktdaten.</p>
 
     <h2>Kontaktdaten</h2>    
-    <p> <b>T:</b>+00 0000 00000 <br>   
-        <b>E:</b>brueder@mail.com </p>  
+    <p> <b>T:</b>+49 778-239-0270 <br>   
+        <b>E:</b><a href="mailto:batteriebrueder@mail.de">batteriebrueder@mail.com</a>
+    </p>  
 
     <p>Dringende Nachrichten bitte hier eingeben: </p>
     <textarea name="message" placeholder="Text hier eingeben"cols="30" rows="10"></textarea><br>
