--- a/views/impressum.html
+++ b/views/impressum.html
@@ -27,7 +27,8 @@
 
     <h2>Kontaktdaten</h2>    
     <p> <b>T:</b>+00 0000 00000 <br>   
-        <b>E:</b>brueder@mail.com </p>    
+        <b>E:</b><a href="mailto:batteriebrueder@mail.de">batteriebrueder@mail.com</a> 
+    </p>
 
     <h2>Rechtliche Hinweise</h2>
     <h3>Haftung</h3>
