--- a/views/versandinfo.html
+++ b/views/versandinfo.html
@@ -26,6 +26,8 @@
     <p>Nach Fertigstellung durch unsere Produktion erfolgt die Zustellung garantiert am folgenden Arbeitstag. Dies gilt nur inerhalb Deutschland.<br><b>Versandlaufzeit</b>: ein Arbeitstag</p>
     <br>
     <h3>Versand ausserhalb Deutschlands noch nicht gewährleistet</h3>
+    <p>Schreiben Sie doch einfach unserem Versandsupport bei weiteren Fragen:</p>
+    <p><a href="mailto:batteribruederVersand@mail.de">batteribruederVersand@mail.de</a></p>
 
 </body>
 </html>
