brothers zu brueder

--- a/views/honeypot.html
+++ b/views/honeypot.html
@@ -10,10 +10,10 @@
 
 <body>
   <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-  <h1>Battery Brothers</h1>
+  <h1>Batterie Brüder</h1>
 
-  <h1>Our System has decided that you are likely a bot.</h1>
-  <p>Request Help: <a href="mailto:abc@gmail.com">I'm not a bot</a></p>
+  <h1>Unser System denkt Sie sind ein Bot!</h1>
+  <p>Hilfe ich bin kein Bot: <a href="mailto:batteriebruedersupport@mail.de">batteriebruedersupport@mail.de</a></p>
 
 </body>
 </html>
