--- a/views/impressum.html
+++ b/views/impressum.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-    <div class="header"><h1>Battery Brothers</h1>
-        <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+    <div class="header"><h1>Batterie Brüder</h1>
+        <p>Dies ist der Batterien Shop von den Batterie Brüdern.</p>
         <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
         <a href="/">
             <button>Zurück zur Startseite</button>
@@ -20,13 +20,13 @@
 
     
     <h1>Impressum</h1>
-    <h2>Batteribrueder GmbH & Co KG</h2>
+    <h2>Batteriebrueder GmbH & Co KG</h2>
     <p> Eine Straße 1 <br>
         12345 Stadt <br>    
         Land</p>
 
     <h2>Kontaktdaten</h2>    
-    <p> <b>T:</b>+00 0000 00000 <br>   
+    <p> <b>T:</b>+49 778-239-0270 <br>   
         <b>E:</b><a href="mailto:batteriebrueder@mail.de">batteriebrueder@mail.com</a> 
     </p>
 
@@ -36,7 +36,7 @@
 
     <h2>Inhaltverantwortliche</h2>
     <li>Florian "Batterie" Regnery</li>
-    <li>Marko "Brothers" Kalaburda</li>
+    <li>Marko "Brüder" Kalaburda</li>
         
 
     
