--- a/views/versandinfo.html
+++ b/views/versandinfo.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-    <div class="header"><h1>Battery Brothers</h1>
-        <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+    <div class="header"><h1>Batterie Brüder</h1>
+        <p>Dies ist der Batterien Shop von denBatterie Brüdern.</p>
         <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
         <a href="/">
             <button>Zurück zur Startseite</button>
