--- a/views/faq.html
+++ b/views/faq.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bbl">
-    <div class="header"><h1>Battery Brothers</h1>
-    <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+    <div class="header"><h1>Batterie Brüder</h1>
+    <p>Dies ist der Batterien Shop von den Batterie Brüdern.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
     <a href="/">
         <button>Zurück zur Startseite</button>
@@ -27,8 +27,8 @@
             </details>
 
             <details>
-                <summary><em> seid ihr besser als die anderen?</em> </summary>
-                <p class="q2">Weil wir besser als die anderen sind.</p>
+                <summary><em>Seid ihr besser als die anderen?</em> </summary>
+                <p class="q2">Ja.</p>
             </details>
 
             <details>
@@ -37,7 +37,7 @@
             </details>
             <details>
                 <summary><em>Hat man noch Zeit für die technische Hochschule, obwohl man Unternehmer ist? </em></summary>
-                <p class="q4">Diese Frage ist sehr persönlich, dahör möchte ich mich meinem Vorredner anschliessen und vielleicht sagen.</p>
+                <p class="q4">Leider nein.</p>
             </details>
         </div>
     </div>
