--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,8 @@
 
 
   <img src="/img/Batteribrueder.svg" alt="bb-logo" class="bb-logo">
-  <div class="header"><h1>Battery Brothers</h1>
-    <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
+  <div class="header"><h1>Batterie Brüder</h1>
+    <p>Dies ist der Batterien Shop von den Batterie Brüdern.</p>
     <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
     </div>
 
