--- a/views/help.html
+++ b/views/help.html
@@ -23,7 +23,7 @@
 
     <h2>Kontaktdaten</h2>    
     <p> <b>T:</b>+49 778-239-0270 <br>   
-        <b>E:</b><a href="mailto:batteriebrueder@mail.de">batteriebrueder@mail.com</a>
+        <b>E:</b><a id="email">batteriebrueder@mail.com</a>
     </p>  
 
     <p>Dringende Nachrichten bitte hier eingeben: </p>
@@ -33,5 +33,12 @@
     </a>
 
     
+    <script>
+        if(document.getElementById('email')){
+            window.addEventListener('load', () =>{
+                document.getElementById('email').href = window.atob('bWFpbHRvOmJhdHRlcmllYnJ1ZWRlckBtYWlsLmRl')
+            })
+        }
+    </script>
 </body>
 </html>
